--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <div class="wrapper">
-
+	<script src="script.js"></script>
+	<link rel='stylesheet' href='style.scss'>
   <div class="content">
     <div class="bg-shape">
       <img src="https://res.cloudinary.com/muhammederdem/image/upload/v1536405214/starwars/logo.png" alt="">
