--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<link rel='stylesheet' href='style.css'>
+<script src='script.js'></script>
+
+
 <div id="minecraft" ></div>
 <div id="instruccions">
   <h1>PIG MINECRAFT</h1>
