--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<link rel='stylesheet' href='style.css'>
+<html>
+	<link rel='stylesheet' href='style.css'>
 	<script src='script.js'></script>
 
 
@@ -12,3 +13,4 @@
 <div id="social">
   <a href="https://github.com/kevoj" target="_blank"> | Github | </a>
 </div>
+</html>
