--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.styl¨>
+<script src="script.js"></script>
 <div class="cabinet">
   <div>
     <div class="mirror"></div>
