--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<script src="script.js"></script>
-<link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - Pig Minecraft</title>
+  <script src="script.js"></script>
+	<link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <div id="minecraft" ></div>
 <div id="instruccions">
   <h1>PIG MINECRAFT</h1>
@@ -9,3 +18,8 @@
 <div id="social">
   <a href="https://github.com/kevoj" target="_blank"> | Github | </a>
 </div>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script><script  src="./script.js"></script>
+
+</body>
+</html>
