--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
-<script src="script.js"></script>
-<link rel=¨stylesheet¨ type=¨text/css¨ href=¨style.css¨>
-<meta charset="UTF-8">
-<title>CodePen - Pig Minecraft</title>
-
+  <meta charset="UTF-8">
+  <title>CodePen - Pig Minecraft</title>
+  <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -20,7 +18,7 @@
   <a href="https://github.com/kevoj" target="_blank"> | Github | </a>
 </div>
 <!-- partial -->
-  
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script><script  src="script.js"></script>
 
 </body>
 </html>
