--- a/index.html
+++ b/index.html
@@ -1,24 +1,35 @@
-<!DOCTYPE html>
-<html lang="en" >
+<!DOCTYPE HTML>
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>CodePen - Pig Minecraft</title>
-  <link rel="stylesheet" href="style.css">
-
+    <title>Index Page</title>
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <meta name="viewport" content=""width=deve-width, initial-scale="1.0">
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-<div id="minecraft" ></div>
-<div id="instruccions">
-  <h1>PIG MINECRAFT</h1>
- <span>press click to remove oxygen
-</span>
-</div>
-<div id="social">
-  <a href="https://github.com/kevoj" target="_blank"> | Github | </a>
-</div>
-<!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js'></script><script  src="script.js"></script>
+    <header>
+        <nav>
+            <label>Andrew Long</label>
+            <ul class="navbar">
+                <li><a class="active" href="index.html">Index</a></li>
+                <li><a href="aboutMe.html">About Me</a></li>
+            </ul>
+        </nav>
+    </header>
 
+    <div>
+        <h1>Hello 👋, I go by Andrew</h1>
+    </div>
+    <div>
+        <img src="me.jpg" alt="Me in Germnany">
+    </div>
+
+    <footer>
+        <div class="footer-buttons">
+            <button class="left-button">Previous Student</button>
+            <a class="hyperlink" href="https://mattm401.github.io/">Link to Course Website</a>
+            <button class="right-button">Next Student</button>
+        </div>
+    </footer>
 </body>
 </html>
