trying to fix page

--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
     <title>Index Page</title>
     <link rel="stylesheet" type="text/css" href="index.css">
-    <meta name="viewport" content=""width=deve-width, initial-scale="1.0">
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
         <nav>
-            <label>Andrew Long</label>
+            <input type="checkbox" id="check" class="checkbtn">
+            <label for="check" class="checkbtn">
+                <i class="fa fa-bars"></i>
+            </label>
+            <label class="name">Andrew Long</label>
             <ul class="navbar">
                 <li><a class="active" href="index.html">Index</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
