--- a/aboutMe.html
+++ b/aboutMe.html
@@ -4,14 +4,14 @@
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="aboutMe.css">
     <meta name="viewport" content=""width=deve-width, initial-scale="1.0">
-    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
         <nav>
             <label>Andrew Long</label>
             <ul class="navbar">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Index</a></li>
                 <li><a class="active" href="aboutMe.html">About Me</a></li>
             </ul>
         </nav>
