more css and project page

--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>Index Page</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <title>Projects</title>
+    <link rel="stylesheet" type="text/css" href="projects.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
@@ -18,25 +18,12 @@
                 <span class="last-name">Long</span>
             </label>
             <ul class="navbar">
-                <li class="animated bounce"><a class="active" href="index.html">Index</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="index.html">Index</a></li>
+                <li class="animated bounce"><a class="active" href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
             </ul>
             <script src='index.js'></script>
         </nav>
     </header>
-
-    <h1>Hello 👋, my name is Andrew Long,</h1>
-    <h2>I go by Andrew</h2>
-    <div>
-        <img src="me.jpg" alt="Me in Germnany">
-    </div>
-    <footer>
-        <div class="footer">
-            <button class="left-button">Previous Student</button>
-            <a class="hyperlink" href="https://mattm401.github.io/">Link to Course Website</a>
-            <button class="right-button">Next Student</button>
-        </div>
-    </footer>
 </body>
 </html>
