--- a/aboutMe.html
+++ b/aboutMe.html
@@ -22,7 +22,7 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li class="animated bounce"><a class="active" href="aboutMe.html">About Me</a></li>
             </ul>
-            <script src='index.js'></script>
+            <script src='scroll.js'></script>
         </nav>
     </header>
 
@@ -38,7 +38,7 @@
         <p>Weightlifting: I have been lifting for about 5-6 years and its something I will never quit.</p>
         <p>Running: I picked up running back up two years ago and its one of the best ways to get into nature.</p>
         <p>Skiing: I went Skiing for the first time last winter and I plan to make it a routine.</p>
-        <p>Fishing: Been fishing since I was a kid, exciting for the trout season here at white clay creek.</p>
+        <p>Fishing: Been fishing since I was a kid, excited for the trout season here at white clay creek.</p>
         <p>Nutrition: I have become a little obsessed with optimal nutrition in the last year or so.</p>
         <p>Gaming: I mean, who doesn't.</p>
     </div>
