--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
             </ul>
-            <script src='index.js'></script>
+            <script src='scroll.js'></script>
         </nav>
     </header>
 
@@ -32,11 +32,9 @@
         <img src="me.jpg" alt="Me in Germnany">
     </div>
     <footer>
-        <div class="footer">
-            <button class="left-button">Previous Student</button>
-            <a class="hyperlink" href="https://mattm401.github.io/">Link to Course Website</a>
-            <button class="right-button">Next Student</button>
-        </div>
+        <button class="left-button">Previous Student</button>
+        <a class="hyperlink" href="https://mattm401.github.io/">Link to Course Website</a>
+        <button class="right-button">Next Student</button>
     </footer>
 </body>
 </html>
