--- a/projects.html
+++ b/projects.html
@@ -22,8 +22,29 @@
                 <li class="animated bounce"><a class="active" href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
             </ul>
-            <script src='index.js'></script>
+            <script src='scroll.js'></script>
         </nav>
     </header>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+    <h1>PP</h1>
+
+
 </body>
 </html>
