--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <h1>Hello 👋, my name is Andrew Long,</h1>
     <h2>I go by Andrew</h2>
     <div>
-        <img src="me.jpg" alt="Me in Germnany">
+        <img src="./pics/me.jpg" alt="Me in Germnany">
     </div>
     <footer>
-        <button class="left-button">Previous Student</button>
+        <button class="left-button">&#9664; Previous Student</button>
         <a class="hyperlink" href="https://mattm401.github.io/">Link to Course Website</a>
-        <button class="right-button">Next Student</button>
+        <button class="right-button">Next Student &#9654;</button>
     </footer>
 </body>
 </html>
