--- a/projects.html
+++ b/projects.html
@@ -25,26 +25,12 @@
             <script src='scroll.js'></script>
         </nav>
     </header>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-    <h1>PP</h1>
-
-
+    <div class="info-left">
+        <a href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home"><img class="img" src="./pics/gene.png" alt="Gene"></a>
+        <div>
+          <li class="left-li">This is my Senior Design Project that my team and I worked on alongside Professor Duncan, and UD Professor of Biology</li>
+          <p>Colaborated With: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
+        </div>
+    </div>
 </body>
 </html>
