--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <img src="./pics/me.jpg" alt="Me in Germnany">
     </div>
     <footer>
-        <button class="left-button">&#9664; Previous Student</button>
+        <a href="https://estipes.github.io/"><button class="left-button">Previous Student</button></a>
         <a class="hyperlink" href="https://mattm401.github.io/">Link to Course Website</a>
-        <button class="right-button">Next Student &#9654;</button>
+        <a href="https://yang-yu-xing.github.io/"><button class="right-button">Next Student</button></a>
     </footer>
 </body>
 </html>
