--- a/projects.html
+++ b/projects.html
@@ -28,9 +28,12 @@
     <div class="info-left">
         <a href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home"><img class="img" src="./pics/gene.png" alt="Gene"></a>
         <div>
-          <li class="left-li">This is my Senior Design Project that my team and I worked on alongside Professor Duncan, and UD Professor of Biology</li>
-          <p>Colaborated With: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
+          <li class="left-list">This is my Senior Design Project that my team and I worked on alongside Professor Duncan, and UD Professor of Biology</li>
+          <li class="left-list">We were tasked with building a website capable of displaying gene data</li>
+          <li class="left-list">The site consists of a gene search function, three different plot types, and a gene grid option</li>
+          <dd class="left-list">pp</dd>
         </div>
+        <p>Colaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
     </div>
 </body>
 </html>
