--- a/projects.html
+++ b/projects.html
@@ -25,15 +25,19 @@
             <script src='scroll.js'></script>
         </nav>
     </header>
-    <div class="info-left">
-        <a href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home"><img class="img" src="./pics/gene.png" alt="Gene"></a>
-        <div>
-          <li class="left-list">This is my Senior Design Project that my team and I worked on alongside Professor Duncan, and UD Professor of Biology</li>
-          <li class="left-list">We were tasked with building a website capable of displaying gene data</li>
-          <li class="left-list">The site consists of a gene search function, three different plot types, and a gene grid option</li>
-          <dd class="left-list">pp</dd>
+    <div class="container">
+        <div class="left-sub-container">
+            <a href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home"><img class="img" src="./pics/gene.png" alt="Gene"></a>
+            <div class="left-list">
+                <li>This is my Senior Design Project that my team and I worked on alongside Professor Duncan, a UD Professor of Biology</li>
+                <li>We were tasked with building a website capable of displaying gene data</li>
+                <li>The site consists of a gene search function, three different plot types, and a gene grid option</li>
+                <h2>Challenges:</h1>
+                    <li>Manuipluating the data structure in a way that makes it readable to our plotting library</li>
+                    <li>Working with massive data sets</li>
+            </div>
         </div>
-        <p>Colaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
+        <p class="p-left">Colaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
     </div>
 </body>
 </html>
