finshing up errors

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
     <title>Index Page</title>
     <link rel="stylesheet" type="text/css" href="index.css">
@@ -32,9 +32,9 @@
         <img src="./pics/me.jpg" alt="Me in Germnany">
     </div>
     <footer>
-        <a href="https://estipes.github.io/"><button class="left-button">Previous Student</button></a>
+        <a href="https://estipes.github.io/" class="button-link">Previous Student</a>
         <a class="hyperlink" href="https://mattm401.github.io/">Link to Course Website</a>
-        <a href="https://yang-yu-xing.github.io/"><button class="right-button">Next Student</button></a>
+        <a href="https://yang-yu-xing.github.io/" class="button-link">Next Student</a>    
     </footer>
 </body>
 </html>
