--- a/projects.html
+++ b/projects.html
@@ -1,10 +1,17 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
     <title>Projects</title>
     <link rel="stylesheet" type="text/css" href="projects.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <script>
+        // Get the current width of the browser window
+        var windowWidth = window.innerWidth;
+      
+        // Output the width to the console for testing
+        console.log("Current window width: " + windowWidth + " pixels");
+      </script>
 </head>
 <body>
     <header>
@@ -27,12 +34,12 @@
     </header>
     <div class="container">
         <div class="left-sub-container">
-            <a href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home"><img class="img" src="./pics/gene.png" alt="Gene"></a>
+            <a class="project-image"href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home"><img class="img" src="./pics/gene.png" alt="Gene"></a>
             <div class="left-list">
                 <li>This is my Senior Design Project that my team and I worked on alongside Professor Duncan, a UD Professor of Biology</li>
                 <li>We were tasked with building a website capable of displaying gene data</li>
                 <li>The site consists of a gene search function, three different plot types, and a gene grid option</li>
-                <h2>Challenges:</h1>
+                <h3>Challenges:</h3>
                     <li>Manuipluating the data structure in a way that makes it readable to our plotting library</li>
                     <li>Working with massive data sets</li>
             </div>
