--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="aboutMe.css">
