finshing up errors

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
     <h1>Hello 👋, my name is Andrew Long,</h1>
     <h2>I go by Andrew</h2>
+    <p>Course: CISC474</p>
+    <p>Assignment: Personal Web Page 1</p>
+    <p>Email: andrewl@udel.edu</p>
     <div>
         <img src="./pics/me.jpg" alt="Me in Germnany">
     </div>
