--- a/projects.html
+++ b/projects.html
@@ -34,17 +34,22 @@
     </header>
     <div class="container">
         <div class="left-sub-container">
-            <a class="project-image"href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home"><img class="img" src="./pics/gene.png" alt="Gene"></a>
+            <a class="project-image" href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home">
+                <img class="img" src="./pics/gene.png" alt="Gene">
+            </a>
             <div class="left-list">
-                <li>This is my Senior Design Project that my team and I worked on alongside Professor Duncan, a UD Professor of Biology</li>
-                <li>We were tasked with building a website capable of displaying gene data</li>
-                <li>The site consists of a gene search function, three different plot types, and a gene grid option</li>
-                <h3>Challenges:</h3>
-                    <li>Manuipluating the data structure in a way that makes it readable to our plotting library</li>
+                <ul>
+                    <li>This is my Senior Design Project that my team and I worked on alongside Professor Duncan, a UD Professor of Biology</li>
+                    <li>We were tasked with building a website capable of displaying gene data</li>
+                    <li>The site consists of a gene search function, three different plot types, and a gene grid option</li>
+                    <h3>Challenges:</h3>
+                    <li>Manipulating the data structure in a way that makes it readable to our plotting library</li>
                     <li>Working with massive data sets</li>
+                </ul>
             </div>
         </div>
-        <p class="p-left">Colaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
+        <p class="p-left">Collaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
     </div>
+    
 </body>
 </html>
