finshing up errors

--- a/projects.html
+++ b/projects.html
@@ -42,14 +42,15 @@
                     <li>This is my Senior Design Project that my team and I worked on alongside Professor Duncan, a UD Professor of Biology</li>
                     <li>We were tasked with building a website capable of displaying gene data</li>
                     <li>The site consists of a gene search function, three different plot types, and a gene grid option</li>
-                    <h3>Challenges:</h3>
+                </ul>
+                <p>Challenges:</p>
+                <ul>
                     <li>Manipulating the data structure in a way that makes it readable to our plotting library</li>
                     <li>Working with massive data sets</li>
                 </ul>
             </div>
         </div>
         <p class="p-left">Collaboration: Kurt Hammen, Mar Tejador, Caroline Robinette, Justin Tenerelli</p>
-    </div>
-    
+    </div>     
 </body>
 </html>
