--- a/index.html
+++ b/index.html
@@ -2,16 +2,19 @@
 <html lang="en">
 <head>
     <title>Index Page</title>
-    <link rel="stylesheet" type="text/css" href="index.css">
+    <link rel="stylesheet" type="text/css" href="./css/index.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/506c3b838d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
             <input type="checkbox" id="check" class="checkbtn">
             <label for="check" class="checkbtn">
-                <i class="fa fa-bars"></i>
+                <i class="fa fa-bars"></i>           
+            </label>
+            <label for="check" type= "checkbox" id="x" class="xbtn">
+                <i class="fa-solid fa-rectangle-xmark"></i>
             </label>
             <label class="name">
                 <span class="first-name">Andrew</span>
@@ -22,7 +25,7 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
             </ul>
-            <script src='scroll.js'></script>
+            <script src='./javascript/scroll.js'></script>
         </nav>
     </header>
 
@@ -35,9 +38,9 @@
         <img src="./pics/me.jpg" alt="Me in Germnany">
     </div>
     <footer>
-        <a href="https://estipes.github.io/" class="button-link">Previous Student</a>
+        <a href="https://estipes.github.io/" class="button-link">PREVIOUS STUDENT</a>
         <a class="hyperlink" href="https://mattm401.github.io/">Link to Course Website</a>
-        <a href="https://yang-yu-xing.github.io/" class="button-link">Next Student</a>    
+        <a href="https://yang-yu-xing.github.io/" class="button-link">NEXT STUDENT</a>    
     </footer>
 </body>
 </html>
