--- a/projects.html
+++ b/projects.html
@@ -2,23 +2,19 @@
 <html lang="en">
 <head>
     <title>Projects</title>
-    <link rel="stylesheet" type="text/css" href="projects.css">
+    <link rel="stylesheet" type="text/css" href="./css/projects.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <script>
-        // Get the current width of the browser window
-        var windowWidth = window.innerWidth;
-      
-        // Output the width to the console for testing
-        console.log("Current window width: " + windowWidth + " pixels");
-      </script>
+    <script src="https://kit.fontawesome.com/506c3b838d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
         <nav>
             <input type="checkbox" id="check" class="checkbtn">
             <label for="check" class="checkbtn">
-                <i class="fa fa-bars"></i>
+                <i class="fa fa-bars"></i>           
+            </label>
+            <label for="check" type= "checkbox" id="x" class="xbtn">
+                <i class="fa-solid fa-rectangle-xmark"></i>
             </label>
             <label class="name">
                 <span class="first-name">Andrew</span>
@@ -29,7 +25,7 @@
                 <li class="animated bounce"><a class="active" href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
             </ul>
-            <script src='scroll.js'></script>
+            <script src='./javascript/scroll.js'></script>
         </nav>
     </header>
     <div class="container">
