--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,7 @@
             <label for="check" class="checkbtn">
                 <i class="fa fa-bars"></i>           
             </label>
-            <label for="check" id="x" class="xbtn">
+            <label for="check" class="xbtn">
                 <i class="fa-solid fa-rectangle-xmark"></i>
             </label>
             <label class="name">
