i think email works now

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <title>Index Page</title>
     <link rel="stylesheet" type="text/css" href="./css/index.css">
+    <link rel="stylesheet" type="text/css" href="./css/navbar.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/506c3b838d.js" crossorigin="anonymous"></script>
 </head>
@@ -24,6 +25,7 @@
                 <li class="animated bounce"><a class="active" href="index.html">Index</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <script src='./javascript/scroll.js'></script>
         </nav>
@@ -38,9 +40,9 @@
         <img src="./pics/me.jpg" alt="Me in Germnany">
     </div>
     <footer>
-        <a href="https://estipes.github.io/" class="button-link">PREVIOUS STUDENT</a>
+        <a class="button-link" href="https://estipes.github.io/">PREVIOUS STUDENT</a>
         <a class="hyperlink" href="https://mattm401.github.io/">Link to Course Website</a>
-        <a href="https://yang-yu-xing.github.io/" class="button-link">NEXT STUDENT</a>    
+        <a class="button-link" href="https://yang-yu-xing.github.io/">NEXT STUDENT</a>    
     </footer>
 </body>
 </html>
