--- a/projects.html
+++ b/projects.html
@@ -3,6 +3,7 @@
 <head>
     <title>Projects</title>
     <link rel="stylesheet" type="text/css" href="./css/projects.css">
+    <link rel="stylesheet" type="text/css" href="./css/navbar.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/506c3b838d.js" crossorigin="anonymous"></script>
 </head>
@@ -24,6 +25,7 @@
                 <li><a href="index.html">Index</a></li>
                 <li class="animated bounce"><a class="active" href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <script src='./javascript/scroll.js'></script>
         </nav>
@@ -31,7 +33,7 @@
     <div class="container">
         <div class="left-sub-container">
             <a class="project-image" href="http://cisc-capstone-teams.pages.eecis.udel.edu/Home">
-                <img class="img" src="./pics/gene.png" alt="Gene">
+                <img src="./pics/gene.png" alt="Gene">
             </a>
             <div class="left-list">
                 <ul>
