--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,6 +3,7 @@
 <head>
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="./css/aboutMe.css">
+    <link rel="stylesheet" type="text/css" href="./css/navbar.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/506c3b838d.js" crossorigin="anonymous"></script>
 </head>
@@ -24,6 +25,7 @@
                 <li><a href="index.html">Index</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li class="animated bounce"><a class="active" href="aboutMe.html">About Me</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <script src='./javascript/scroll.js'></script>
         </nav>
