--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,7 +3,7 @@
 <head>
     <title>About Me</title>
     <link rel="stylesheet" type="text/css" href="./css/aboutMe.css">
-    <link rel="stylesheet" type="text/css" href="./css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="./css/global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/506c3b838d.js" crossorigin="anonymous"></script>
 </head>
