--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,17 @@
 <head>
     <title>Contact Page</title>
     <link rel="stylesheet" type="text/css" href="./css/contact.css">
-    <link rel="stylesheet" type="text/css" href="./css/navbar.css">
+    <link rel="stylesheet" type="text/css" href="./css/global.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://kit.fontawesome.com/506c3b838d.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+    (function(){
+        emailjs.init("x9cQ8PtXlRNn8pbZt");
+    })();
+    </script>
 </head>
 <body>
     <header>
