finished email and added notification for email sent

--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,13 @@
                 </div>            
             </div>
         </div>
-    </form>    
+    </form>
+    <div class="email-confirm">
+        <div class="email-sent">
+            <p>Email Sent</p>
+            <i class="fa-solid fa-circle-check fa-2xl" style="color: #4ef48b;"></i>
+        </div>
+    </div>    
     <script src='./javascript/contact.js'></script>
 </body>
 </html>
