finished the dropdown menu work on project page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="aboutMe.html">About Me</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a class="class-links-btn" id="class-links-btn">Class Links</a></li>
             </ul>
+            <div class="class-dropdown">
+                <div class="dropdown-item"><a class="class-links" href="https://mattm401.github.io/">Course Website</a></div>
+                <div class="dropdown-item"><a class="class-links" href="https://yang-yu-xing.github.io/">NEXT STUDENT</a></div>
+                <div class="dropdown-item"><a class="class-links" href="https://estipes.github.io/">PREVIOUS STUDENT</a></div>
+            </div>            
             <script src='./javascript/scroll.js'></script>
         </nav>
     </header>
@@ -39,10 +45,6 @@
     <div>
         <img src="./pics/me.jpg" alt="Me in Germnany">
     </div>
-    <footer>
-        <a class="button-link" href="https://estipes.github.io/">PREVIOUS STUDENT</a>
-        <a class="hyperlink" href="https://mattm401.github.io/">Link to Course Website</a>
-        <a class="button-link" href="https://yang-yu-xing.github.io/">NEXT STUDENT</a>    
-    </footer>
+    <script src="./javascript/navbar.js"></script>
 </body>
 </html>
